# gesture-embedding-classifier

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
configs/: fcn1d_v1.yaml  resnet1d_v1.yaml  vgg19_v1.yaml  wavenet_v1.yaml
gesture_embedding_classifier/: module.py  train.py  transforms.py  utils.py
gesture_embedding_classifier/data/: __init__.py  datamodule.py  dataset.py  split_samples.py
gesture_embedding_classifier/models/: __init__.py  cnn.py  utils.py
gesture_embedding_classifier/models/image/: vgg19.py
gesture_embedding_classifier/models/ts/: fcn.py  resnet.py  wavenet.py
